--- a/index.html
+++ b/index.html
@@ -10,5 +10,12 @@
 </head>
 
 <body>
+<div>
+  <h1>
+    Lives: <span id="lives"> 0 </span>
+    Points: <span id="points"> 0 </span>
+  </h1>
+</div>
+
 </body>
 </html>
